# marque

./: .gitattributes  .gitignore  .mailmap  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  REUSE.toml  SECURITY.md  _typos.toml  cliff.toml  codecov.yml  contextlint.config.json  deny.toml  deny.wasm-safe.toml  execution.rs  hk.pkl  mise.toml  ruff.toml  rust-toolchain.toml  test.txt  test_needless  test_perf.sh  test_reduce_intersect  test_reduce_intersect.rs  test_slice  test_slice.rs
crates/capco/: CAPCO-CONTEXT.md  Cargo.toml  README.md  REUSE.toml  build.rs
crates/capco/corpus/: README.md  priors.json
crates/capco/docs/: CAPCO-2016.md  CAPCO-2016_citation_index.yml  CAPCO-v5.1-2012.md
crates/capco/src/: _disabled_tests.rs  build_inputs.rs  fact_bitmask.rs  lattice.rs  lib.rs  priors.rs  provenance.rs  rules.rs  rules_declarative.rs  rules_legacy.rs  rules_sci_per_system.rs  scheme.rs  vocab.rs  vocabulary.rs
crates/capco/tests/: all_rules_trusted.rs  b3_3a2_recognition_accessors.rs  b3_3a_trait_lift.rs  banner_rollup_walker.rs  banner_rollup_walker_overlap_guard.rs  bare_canonical_compound.rs  bare_hcs_rsv_class_rules.rs  bridge_message_by_name.rs  build_input_pin_test.rs  byte_identity_pr3c.rs  canonicalize_byte_equivalence.rs  category_action_intent.rs  category_lattice_laws.proptest-regressions  category_lattice_laws.rs  citation_fidelity.rs  class_floor_catalog.rs  closure_runtime.rs  closure_table_equivalence.rs  companion_insert_no_dissem.rs  constraint_rule_id.rs  corpus_parity.rs  corrections_map.rs  cross_axis_dominance.rs  deprecated_sci_long_form.rs  deprecation_invariant.rs  dissem_nato_pure_nato_portion.rs  document_rollup.rs  e002_fix_canonicalization.rs  e005_declassify_on_misplaced.rs  e007_x_shorthand.rs  e008_suppression_matrix.rs  e010_intent_only_engine.rs  e012_conscious_defer.rs  e014_fact_add_engine.rs  e021_rd_frd_requires_noforn.rs  e024_atomic_cluster.rs  e031_sar_rollup_fix_shape.rs  e035_sci_asymmetry_with_sar.rs  e037_e038_e039_e041_nodis_exdis.rs  e038_intent_only_engine.rs  (+87 more)
crates/config/: Cargo.toml  README.md
crates/config/src/: corpus_override.rs  corrections.rs  env.rs  layered.rs  lib.rs  local.rs  severity.rs
crates/config/tests/: closure_severity.rs  precedence.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: attrs.rs  error.rs  fuzzy.rs  lib.rs  parser.rs  scanner.rs  span.rs
crates/core/tests/: alloc_budget.rs  banner_long_forms.rs  display_only_list.rs  dissem_attribution.rs  fgi_silent_skip_guard.rs  non_ic_nnpi.rs  rel_to_mid_dissem.rs  sci_long_form_spans.rs  separator_spans.rs
crates/engine/: Cargo.toml  LICENSE.md  README.md  build.rs
crates/engine/benches/: closure_pass.rs  deadline_overhead.rs  decision_tracing_overhead.rs  decoder_10kb_rel_to_invariant.rs  decoder_trigraph_priors.rs  fix_10kb.rs  fix_latency.rs  fix_throughput.rs  linear_scaling.rs  lint_latency.rs  multi_grammar.rs  profile_project.rs  recognition_token_heavy.rs  throughput_pages.rs
crates/engine/fuzz/: Cargo.toml
crates/engine/src/: audit_render.rs  batch.rs  clock.rs  decoder.rs  engine.rs  erased.rs  errors.rs  lib.rs  merkle.rs  multi_grammar.rs  options.rs  output.rs  pipeline.rs  recognizer.rs  scheduler.rs  session.rs  text_correction.rs
crates/engine/tests/: _throughput_repro.rs  audit.rs  audit_completeness.rs  audit_g13_canary.rs  audit_note_sealing_carve_out.rs  audit_render_session_root.rs  audit_schema_accept_list.rs  b3_3b2_generic_fix_reachability.rs  b3_3b_generic_lint_reachability.rs  b3_4_second_scheme_construction.rs  b4_2_erasure_multigrammar.rs  batch_deadline.rs  batch_r002.rs  closure_hotpath.rs  content_zeroize.rs  core_error_isolation.rs  corpus_accuracy.rs  corpus_override.rs  deadline.rs  decision_tracing.rs  decision_tracing_smoke.rs  decoder_accuracy.rs  decoder_diagnostic.rs  decoder_dispatch.rs  decoder_dispatch_post_280.rs  decoder_recovery.rs  decoder_split_byte_identity.rs  document_corpus.rs  document_resolution.rs  document_resolution_cascade.rs  fix_invariants.rs  fix_pipeline.rs  input_routing.rs  intent_only_byte_identity.rs  lattice_corpus.rs  lint_pipeline.rs  preceding_fix_penalty.rs  proptest_engine.proptest-regressions  proptest_engine.rs  recognized_canonical_field_scoping.rs  (+7 more)
crates/ism/: Cargo.toml  LICENSE.md  README.md  REUSE.toml  build.rs  country_extensions.toml
crates/ism/schemas/: CURRENT_VERSION
crates/ism/src/: attrs.rs  canonical.rs  companion_dedup.rs  date.rs  dissem_attribution.rs  generated.rs  lib.rs  marking_forms.rs  page_context.rs  parsed.rs  projected.rs  sar_sort.rs  span.rs  token_set.rs
crates/ism/tests/: description_title_divergence.rs  (+10 more)
crates/marque-capco/: Cargo.toml  README.md  build.rs
crates/marque-config/: Cargo.toml  README.md
crates/marque-core/: Cargo.toml  README.md
crates/marque-engine/: Cargo.toml  README.md
crates/marque-extract/: Cargo.toml  README.md  REUSE.toml
crates/marque-ism/: Cargo.toml  README.md  build.rs
crates/marque-rules/: Cargo.toml  README.md
crates/marque-scheme/: Cargo.toml  README.md
crates/marque-server/: Cargo.toml  README.md
crates/marque-test-utils/: Cargo.toml
crates/marque-wasm/: Cargo.toml  README.md
crates/rules/: Cargo.toml  README.md
crates/scheme/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
crates/server/: Cargo.toml  README.md
crates/test-utils/: Cargo.toml  REUSE.toml
crates/utils/: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
crates/wasm/: Cargo.toml  README.md  REUSE.toml  mise.toml
marque/: CHANGELOG.md  Cargo.toml  README.md  REUSE.toml
marque/src/: main.rs  render.rs  trace.rs
marque/tests/: cli_config.rs  cli_corpus_override.rs  cli_deadline.rs  cli_exit_codes.rs  cli_fix.rs  cli_smoke.rs  cli_version.rs  corpus_provenance.rs  no_classifier_id_in_commits.rs  session_root.rs  trace_cli.rs
tools/citation-lint/: Cargo.toml  README.md  README.md.license
tools/masking-pin-lint/: Cargo.toml  README.md
tools/message-template-extract/: Cargo.toml  README.md
tools/promote-callsite-lint/: Cargo.toml  README.md
(+7349 files in other folders)
