# SPDX-FileCopyrightText: 2026 Knitli Inc. <knitli@knitli.com>
# SPDX-License-Identifier: MIT OR Apache-2.0
# NOTE: SPDX identifiers at the top of a file apply only to that file.
# The [Marque License 1.0 (SPDX-License-Identifier: LicenseRef-MarqueLicense-1.0)](./LICENSE.md) covers the project's source code and technical specs/plans.
[workspace]
resolver = "3"
members = [
  "crates/capco",
  "crates/config",
  "crates/core",
  "crates/engine",
  "crates/extract",
  "crates/ism",
  "crates/rules",
  "crates/scheme",
  "crates/server",
  "crates/test-utils",
  "crates/wasm",
  "marque",
]
exclude = ["crates/engine/fuzz"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/marquetools/marque"
license-file = "./LICENSE.md"

[workspace.dependencies]
marque-capco = { path = "crates/capco", version = "0.2.0" }
marque-config = { path = "crates/config", version = "0.2.0", default-features = false }
marque-core = { path = "crates/core", version = "0.2.0" }
marque-engine = { path = "crates/engine", version = "0.2.0", default-features = false }
marque-extract = { path = "crates/extract", version = "0.2.0" }
# Internal crates
marque-ism = { path = "crates/ism", version = "0.2.0" }
marque-rules = { path = "crates/rules", version = "0.2.0" }
marque-scheme = { path = "crates/scheme", version = "0.2.0" }
marque-test-utils = { path = "crates/test-utils" }

async-trait = "0.1.89"
futures = "0.3.32"
futures-core = "0.3.32"
# Async
tokio = { version = "1.52.2", features = ["full"] }

aho-corasick = "1.1.4"
# Text processing / scanning
memchr = "2.8.0"

anyhow = "1.0.102"
# Error handling
thiserror = "2.0.18"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"

# HTTP / server
axum = { version = "0.8.9", features = ["json"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "set-header", "trace"] }

assert_cmd = "2.2.2"
# CLI
clap = { version = "4.6.1", features = ["derive"] }
humantime = "2.3.0"
is-terminal = "0.4.17"
tempfile = "3.27.0"

# Compile-time tables
phf = { version = "0.13.1", features = ["macros"] }

# Batch processing utilities (concurrency control, fingerprinting)
recoco-utils = { version = "0.2.3", default-features = false, features = [
  "concur_control",
  "fingerprint"
] }

# Build-time XML parsing (marque-ism build.rs)
quick-xml = "0.39.2"

# Vendored ODNI schema crates from github.com/marquetools/ism-data,
# consumed as build-dependencies for marque-ism's codegen.
ism = "20230609.0.0"
ism-data = "20230609.0.0"
ism-ismcat = "20230609.0.0"

# XML processing (Schematron validation, XPath, DOM)
xmloxide = { version = "0.4", default-features = false }

# Benchmarking
criterion = { version = "0.8.2", features = ["html_reports"] }

# Snapshot testing
insta = { version = "1.47.2", features = ["json"] }

# Compile-time trait-bound assertions
static_assertions = "1.1.0"

# Property-based testing
proptest = { version = "1", default-features = false, features = ["std"] }

js-sys = "0.3.95"
serde-wasm-bindgen = "0.6.5"
# WASM
wasm-bindgen = "0.2.118"

# Cross-target Instant polyfill — std::time::Instant on native targets,
# Performance.now() / Date.now() polyfill on wasm32-unknown-unknown.
# Used by marque-engine for the per-document deadline check (spec 005).
# Without this, `Instant::now()` panics on the WASM target with "time
# not implemented on this platform" the first time a deadline-bearing
# WASM caller hits the lint loop.
web-time = "1.1.0"

# Date-time arithmetic for IsmDate precision-tier modeling (issue #209).
# `default-features = false` drops `tzdb-zoneinfo` and `tzdb-bundle-platform`
# so the WASM target compiles without tzdb I/O; civil::Date / civil::DateTime /
# tz::Offset are available under just `features = ["std"]`.
jiff = { version = "0.2.24", default-features = false, features = ["std"] }

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Workspace-wide lint settings — inherited by all member crates.
# Coverage builds may use `cfg(coverage)`, and some nightly-based coverage setups
# also use `cfg(coverage_nightly)`. We declare both here to silence the
# unexpected_cfgs warning on Rust 1.80+ across stable CI and nightly/local runs
# without requiring per-crate overrides.
#
# `corpus-override` is a real feature in marque-engine / marque-capco /
# marque-config / marque (CLI) but is DELIBERATELY absent from
# marque-wasm's own `[features]` (T067 / T3 enforcement — see
# `docs/security/WHITEPAPER.md` §10.3). The `#[cfg(feature = "corpus-override")]`
# probe in `crates/wasm/src/lib.rs` and `crates/wasm/tests/no_corpus_override.rs`
# is the load-bearing part of that enforcement; without this check-cfg entry
# rustc would warn on every build because the feature is locally undeclared.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(coverage)",
  "cfg(coverage_nightly)",
  'cfg(feature, values("corpus-override"))',
] }

[profile.bench]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "fat"
# `panic = "unwind"` (Rust default) is required so the engine's
# `std::panic::catch_unwind` wrapper around `Rule::check` can recover
# from a buggy rule that constructs an out-of-range `Confidence` (or
# any other panic) — whitepaper §6.3 / gap register #10. With
# `panic = "abort"` the panic terminates the process before the catch
# fires, which would turn one rule's bug into a complete service
# outage. Keeping unwind also makes `BatchError::is_panic()`
# (`crates/engine/src/batch.rs`) actually fire in release builds —
# `tokio::task::spawn_blocking` reports a `JoinError::Panic` only if
# the panic unwound the worker thread, not aborted it.
#
# Cost: ~5-10% larger release binary and ~1-3% runtime overhead from
# exception-table generation. Acceptable for a compliance tool where
# resilience to a single rule defect outranks marginal binary size.
codegen-units = 1

# --- WASM-specific profiles

# There's an issue with wasm-pack making the hand-off in more complex scenarios
# So instead we have a basic profile and then optimize separately
[profile.profiling]
inherits = "release"
opt-level = 3

[profile.release-cloud]
inherits = "release"

[profile.release-server]
inherits = "release"

[profile.release-web]
inherits = "release"
