[package]
name = "marque"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Classification marking linter, formatter, and fixer"
repository.workspace = true
license.workspace = true

[[bin]]
name = "marque"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
is-terminal = { workspace = true }
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-engine = { workspace = true, features = ["batch"] }
marque-extract = { workspace = true }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
