# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
description = "A fast, rule-driven text linter, formatter, and transformer. Ships with CAPCO/ISM classification-marking rules."
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[[bin]]
name = "marque"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
is-terminal = { workspace = true }
marque-capco = { workspace = true }
marque-config = { workspace = true }
marque-engine = { workspace = true, features = ["batch"] }
marque-extract = { workspace = true }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
marque-scheme = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }

[features]
# Phase-D / US2 wiring. The CLI is the one target that ships the
# corpus-override surface — server rejects it at the handler layer,
# WASM excludes it at compile time (Constitution III + FR-013 + T3).
# Proxying through `marque-engine/corpus-override` pulls the matching
# gates in capco + config along with it.
default = []
# Harness pass-throughs for convenience on the CLI crate; individual
# harnesses are exercised from `marque-capco` and `marque-engine`
# integration tests, not from the CLI binary itself.
corpus-harness = ["marque-engine/corpus-harness"]
corpus-override = ["marque-engine/corpus-override"]
decoder-harness = ["marque-engine/decoder-harness"]

[lints]
workspace = true
