# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
description = "A fast, rule-driven text linter, formatter, and transformer. Ships with CAPCO/ISM classification-marking rules."
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[[bin]]
name = "marque"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
# `blake3::Hash` is the wire type for the audit-record
# `original_digest` / `bytes_digest` fields. The renderer formats
# `blake3:<hex>`. The same `pure`-feature surface flows through
# `marque-rules` and `marque-engine`; the CLI inherits transitively but
# the direct dep here makes the wire-format formatting explicit at the
# emit boundary.
blake3 = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
is-terminal = { workspace = true }
marque-capco = { workspace = true }
# CLI loads `.marque.toml` / `.marque.local.toml`; opt in to the toml chain
# the workspace pin keeps off by default (so the WASM build can exclude it).
marque-config = { workspace = true, features = ["toml-loader"] }
marque-engine = { workspace = true, features = ["batch"] }
marque-extract = { workspace = true }
# CLI opts into jiff-backed date validation; the workspace pin keeps
# `default-features = false` so the WASM build inherits the hand-rolled
# Gregorian path (issue #455).
marque-ism = { workspace = true, features = ["dates"] }
marque-rules = { workspace = true }
marque-scheme = { workspace = true }
# Constitution Principle II — readout discipline at the CLI output
# boundary (stdout / atomic temp-file rename). `FixResult.source` is
# `SecretBox<[u8]>`; `expose_secret()` calls at the write sites are
# the grep target.
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }

[features]
# The CLI is the one target that ships the corpus-override surface —
# server rejects it at the handler layer, WASM excludes it at compile
# time (Constitution III). Proxying through
# `marque-engine/corpus-override` pulls the matching gates in capco +
# config along with it.
#
# `decision-tracing` is default-on for the CLI because the `marque
# trace` subcommand is the user-facing entry point for the
# decision-tracing feature — users will reasonably expect it to "just
# work" without rebuilding with a flag. The OFF-mode invariant
# (Constitution Principle I, SC-001 16 ms p95) is preserved at the
# `marque-engine` level: `cargo build -p marque-engine` (no feature)
# still produces a zero-hot-path-cost engine. Flipping default-on at
# the CLI is acceptable because the CLI is not the WASM build target
# (Constitution III, WASM-safe set excludes `marque` the binary).
default = ["decision-tracing"]
# Harness pass-throughs for convenience on the CLI crate; individual
# harnesses are exercised from `marque-capco` and `marque-engine`
# integration tests, not from the CLI binary itself.
corpus-harness = ["marque-engine/corpus-harness"]
corpus-override = ["marque-engine/corpus-override"]
# Threads a `DecisionSink` through the engine and lights up the
# `marque trace` subcommand. Proxies to `marque-engine/decision-tracing`
# (which itself proxies to `marque-scheme/decision-tracing` +
# `marque-capco/decision-tracing`) and pulls `marque-scheme/serde` so
# the CLI can serialize `DecisionEvent` / `DecisionReport` to NDJSON.
decision-tracing = ["marque-engine/decision-tracing", "marque-scheme/serde"]
decoder-harness = ["marque-engine/decoder-harness"]

[lints]
workspace = true
