# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-capco"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "CAPCO rule implementations for marque, consuming generated code from marque-ism"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "build.rs",
  "corpus/README.md",
  "corpus/priors.json",
  "src/**/*.rs",
]

[dependencies]
aho-corasick = { workspace = true }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
marque-scheme = { workspace = true }
phf = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
# path-only (no version) so `cargo publish` strips these dev-deps from the
# uploaded manifest: marque-engine depends on marque-capco (cycle at publish
# time), and marque-test-utils is publish=false.
marque-engine = { workspace = true }
marque-test-utils = { workspace = true }
proptest = { workspace = true }

[build-dependencies]
# Phase-D decoder priors are baked in at compile time from
# `corpus/priors.json`. `serde_json` is a build-dep only — no runtime
# JSON parsing on the decoder hot path (Constitution II, SC-008).
serde_json = { workspace = true }

[features]
# Phase-C–E feature gates.
#
# - `corpus-override`: gate the CLI-only corpus override codepath. Must stay
#   opt-in so the WASM artifact (which never enables this feature) compiles
#   out the override surface entirely (Constitution III + FR-013 + T3).
# - `corpus-harness`: enables the CAPCO corpus equivalence harness (SC-003
#   byte-identical pre/post migration); consumed by integration tests under
#   `crates/capco/tests/corpus_parity.rs` and the US1 quickstart walkthrough.
# - `decoder-harness`: enables the Phase-D decoder accuracy harness
#   (SC-004 ≥85% resolution); consumed by `crates/capco/tests/decoder_*.rs`
#   and the US2 quickstart walkthrough.
#
# All three default to off. A build that enables none of them is identical in
# behavior to pre-Phase-C.
default = []
corpus-harness = []
corpus-override = []
# `count-allocs`: enables the zero-allocation regression gate for
# `Vocabulary` accessors in `crates/capco/tests/vocabulary_zero_alloc.rs`.
# Mirrors the `count-allocs` feature in `marque-core` (gap register #15)
# — it installs a process-wide counting global allocator, so we keep it
# opt-in to avoid polluting the default `cargo test` run. The gate
# lives in its own integration file so it's the only test in its
# binary; CI invokes it with `cargo test -p marque-capco --features
# count-allocs --test vocabulary_zero_alloc`.
count-allocs = []
decoder-harness = []

[lints]
workspace = true
