# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-capco"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
description = "CAPCO rule implementations for marque, consuming generated code from marque-ism"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "build.rs",
  "corpus/README.md",
  "corpus/priors.json",
  "src/**/*.rs",
]

[dependencies]
aho-corasick = { workspace = true }
marque-ism = { workspace = true }
marque-rules = { workspace = true }
marque-scheme = { workspace = true }
phf = { workspace = true }
# Constitution Principle II — `build_decoder_diagnostic` wraps the
# decoder's canonical-bytes attempt in `SecretBox<[u8]>` for
# `Diagnostic.recognized_canonical` so it wipes on drop. WASM-safe
# (marque-rules already normal-deps secrecy for the same field).
secrecy = { workspace = true }
smallvec = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# BLAKE3 defense-in-depth pin verification at test time.
# `build_input_pin_test.rs` re-hashes `docs/CAPCO-2016.md` and
# compares to `build_inputs::CAPCO_2016_MD_BLAKE3`. Protects against
# `--offline` runs or cached `OUT_DIR` skipping the build.rs digest
# recheck.
blake3 = { workspace = true }
insta = { workspace = true }
marque-config = { workspace = true }
marque-core = { workspace = true }
# path-only (no version) so `cargo publish` strips these dev-deps from the
# uploaded manifest: marque-engine depends on marque-capco (cycle at publish
# time), and marque-test-utils is publish=false.
marque-engine = { workspace = true }
marque-test-utils = { workspace = true }
proptest = { workspace = true }
# Parallel `LatticeExpectedFixture` sidecar type local to
# `crates/capco/tests/lattice_corpus_runner.rs`. Sidecars are
# deserialized directly here instead of extending the canonical
# `marque_test_utils::ExpectedFixture` shape.
serde = { workspace = true }
serde_json = { workspace = true }
# Compile-time lattice impl pin at
# `crates/capco/tests/lattice_static_assertions.rs`. Mirrors the
# `crates/ism/tests/send_sync.rs` precedent.
static_assertions = { workspace = true }

[build-dependencies]
# BLAKE3 verification of `docs/CAPCO-2016.md` at compile time per
# Constitution VIII / Authoritative Source Fidelity.
# Build-only on the build.rs side; the runtime hash check at
# `tests/build_input_pin_test.rs` declares its own `dev-dependencies`
# entry below so both surfaces resolve their dependency
# independently.
blake3 = { workspace = true }
# Decoder priors are baked in at compile time from
# `corpus/priors.json`. `serde_json` is a build-dep only — no runtime
# JSON parsing on the decoder hot path (Constitution II).
serde_json = { workspace = true }

[features]
# Feature gates.
#
# - `corpus-override`: gate the CLI-only corpus override codepath. Must stay
#   opt-in so the WASM artifact (which never enables this feature) compiles
#   out the override surface entirely (Constitution III).
# - `corpus-harness`: enables the CAPCO corpus equivalence harness
#   (byte-identical pre/post migration); consumed by integration tests
#   under `crates/capco/tests/corpus_parity.rs`.
# - `decoder-harness`: enables the decoder accuracy harness
#   (≥85% resolution); consumed by `crates/capco/tests/decoder_*.rs`.
#
# All three default to off; a build that enables none of them has the
# baseline behavior.
default = []
corpus-harness = []
corpus-override = []
# `count-allocs`: enables the zero-allocation regression gate for
# `Vocabulary` accessors in `crates/capco/tests/vocabulary_zero_alloc.rs`.
# Mirrors the `count-allocs` feature in `marque-core` (gap register #15)
# — it installs a process-wide counting global allocator, so we keep it
# opt-in to avoid polluting the default `cargo test` run. The gate
# lives in its own integration file so it's the only test in its
# binary; CI invokes it with `cargo test -p marque-capco --features
# count-allocs --test vocabulary_zero_alloc`.
count-allocs = []
# `decision-tracing`: enables capco-side `DecisionSink` emission inside
# `MarkingScheme::project_with_sink` / `closure_with_sink` overrides
# and the `bit_to_row_name` reverse lookup in `closure_table`. Off by
# default; propagated from `marque-engine/decision-tracing` which
# threads the sink through the engine pipeline. Constitution I
# (SC-001 16 ms p95): OFF-mode is byte-identical to a build without
# the feature.
decision-tracing = ["marque-scheme/decision-tracing"]
decoder-harness = []

[lints]
workspace = true
