# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-config"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Layered configuration loading for marque"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "src/**/*.rs",
]

[lints]
workspace = true

[dependencies]
marque-ism = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# Gate the corpus-override parsing codepath. Parsing lives in
# `crates/config/src/corpus_override.rs` (US2 / T065); the feature gate
# here mirrors the gate in `marque-capco` and `marque-engine` so the
# WASM artifact (default-features = false on engine, no corpus-override)
# compiles out the parser entirely. CLI-only, rejected by
# `marque-server` at the handler layer (FR-013 / T3 enforcement).
default = []
corpus-override = []
