# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-config"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
description = "Layered configuration loading for marque"
repository.workspace = true
license-file = "LICENSE.md"
include = [
  "Cargo.toml",
  "LICENSE.md*",
  "README.md",
  "REUSE.toml",
  "src/**/*.rs",
]

[dependencies]
marque-ism = { workspace = true }
marque-rules = { workspace = true }
serde = { workspace = true }
# Parsing the corpus-override JSON file (T065). Unconditional — toml is
# already pulled in for the project config, and serde_json is small
# enough that the conditional dependency machinery (`optional + feature
# enables = ["dep:..."]`) buys nothing here. The corpus_override module
# is still cfg-gated; this dep just makes it cheap to add.
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
# Gate the corpus-override parsing codepath. Parsing lives in
# `crates/config/src/corpus_override.rs` (US2 / T065); the feature gate
# here mirrors the gate in `marque-capco` and `marque-engine` so the
# WASM artifact (default-features = false on engine, no corpus-override)
# compiles out the parser entirely. CLI-only, rejected by
# `marque-server` at the handler layer (FR-013 / T3 enforcement).
default = []
corpus-override = []

[lints]
workspace = true
